--- a/BrowserObjectModeldanDocumentObjectModel/index.html
+++ b/BrowserObjectModeldanDocumentObjectModel/index.html
@@ -2,5 +2,12 @@
 <html>
   <body>
     <h2 id="pesan">Selamat datang!</h2>
+
+    <script src="scripts/welcome.js"></script>
+    <script>
+      // Silakan aktifkan kode di bawah ini dengan hapus komentar untuk melihat hasilnya
+      // const tamu = prompt('Siapakah Anda?');
+      // alert('Selamat datang, ' + tamu + '!');
+    </script>
   </body>
 </html>
