--- a/InteraktifdenganEvent/event.html
+++ b/InteraktifdenganEvent/event.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Menambahkan Event Handler -->
 <html>
   <head>
     <title>Event World</title>
@@ -49,6 +50,17 @@
 
       // document.getElementById('incrementButton').onclick = increment;
       // document.body.onload = welcome;
+
+      // window.addEventListener("load", welcome);
+      //document
+      //.getElementById("incrementButton")
+      //.addEventListener("click", increment);
+
+      // element.onclick = fungsiA;
+      // element.onclick = fungsiB;
+
+      element.addEventListener("click", fungsiA);
+      element.addEventListener("click", fungsiB);
     </script>
   </body>
 </html>
