--- a/InteraktifdenganEvent/custom-event.html
+++ b/InteraktifdenganEvent/custom-event.html
@@ -31,7 +31,9 @@
         const tombol = document.getElementById("tombol");
 
         tombol.addEventListener("changeCaption", customEventHandler);
-        tombol.addEventListener("click", function () {});
+        tombol.addEventListener("click", function () {
+          tombol.dispatchEvent(changeCaption);
+        });
       });
 
       function customEventHandler(ev) {
