update ImplementasiWebStorage (script)

--- a/Penyimpanan Data denganWebStorage/ImplementasiWebStorage/index.html
+++ b/Penyimpanan Data denganWebStorage/ImplementasiWebStorage/index.html
@@ -158,7 +158,7 @@
     </div>
 
     <script>
-      //inisialiasi variabel untuk menampung elemen dokumen
+      //inisialisasi variabel untuk menampung elemen dokumen
       const localTotalVictoryField = document.getElementById(
         "local-total-victory-field"
       );
@@ -198,7 +198,7 @@
         return answer.join("");
       }
 
-      //inisialiasi key untuk session storage
+      //inisialisasi key untuk session storage
       const sessionAnswerKey = "SESSION_ANSWER";
       const sessionUserAttemptsKey = "SESSION_USER_ATTEMPTS";
       const sessionUserIsPlayingKey = "SESSION_USER_IS_PLAYING";
@@ -206,6 +206,30 @@
       //inisialisasi key untuk local storage
       const localTotalVictoryKey = "LOCAL_TOTAL_VICTORIES_PLAYED";
       const localMaximumAttemptsKey = "LOCAL_MAXIMUM_ATTEMPTS";
+
+      window.addEventListener("load", function () {
+        if (typeof Storage !== "undefined") {
+          // (MATERI 1)
+          // inisialisasi semua item web storage yang kita akan gunakan jika belum ada
+          if (sessionStorage.getItem(sessionAnswerKey) === null) {
+            sessionStorage.setItem(sessionAnswerKey, "");
+          }
+          if (sessionStorage.getItem(sessionUserAttemptsKey) === null) {
+            sessionStorage.setItem(sessionUserAttemptsKey, 0);
+          }
+          if (sessionStorage.getItem(sessionUserIsPlayingKey) === null) {
+            sessionStorage.setItem(sessionUserIsPlayingKey, false);
+          }
+          if (localStorage.getItem(localTotalVictoryKey) === null) {
+            localStorage.setItem(localTotalVictoryKey, 0);
+          }
+          if (localStorage.getItem(localMaximumAttemptsKey) === null) {
+            localStorage.setItem(localMaximumAttemptsKey, 0);
+          }
+        } else {
+          alert("Browser yang Anda gunakan tidak mendukung Web Storage");
+        }
+      });
     </script>
   </body>
 </html>
